# gitlab_pilot

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
downloads/1.2.1/AWB_v1.2.1-b00_And_AGT_v1.2.1-b00/datatrak_bgt_agt/: 172.19.19.155_datatrak_bgt_agt_1_datatrak_create_new_table_scripts.sql.Out  172.19.19.155_datatrak_bgt_agt_2_datatrak_alter_table_scripts.sql.Out  172.19.19.155_datatrak_bgt_agt_5_datatrak_views_scripts.sql.Out  172.19.19.155_datatrak_bgt_agt_6_datatrak_sp_scripts.sql.Out  172.19.19.155_datatrak_bgt_agt_8_permission_datatrak_scripts.sql.Out  172.19.19.155_datatrak_bgt_agt_9_new_datatrak_mis_version_update_scripts.sql.Out  1_datatrak_create_new_table_scripts.sql  2_datatrak_alter_table_scripts.sql  3_datatrak_functions_scripts.sql  4_datatrak_triggers_scripts.sql  5_datatrak_views_scripts.sql  6_datatrak_sp_scripts.sql  7_new_datatrak_data_insertion_scripts.sql  8_permission_datatrak_scripts.sql  9_new_datatrak_mis_version_update_scripts.sql  __DO_IT.bat  __DO_IT.bat_txt
downloads/1.2.1/AWB_v1.2.1-b00_And_AGT_v1.2.1-b00/datatrak_bgt_awb/: 1_datatrak_create_new_table_scripts.sql  __DO_IT.bat  (+13 more)
downloads/1.3.0/: BGT MsSQL DBs Release Deployment Guide.docx  checksum.txt
downloads/1.3.0/1_setup_mem_table/: DO_IT.bat  DO_IT.bat_txt  setup_memory_optimized.sql
src/: config.py  main.py  pipeline_handler.py
src/gitlab_pilot/: __init__.py  connection_manager.py  pipeline_controller.py  project_manager.py  project_resource_manager.py  project_to_job_mapper.py  stage_function_registry.py  textual_ui.py  variables_manager.py
(+35 files in other folders)
